--- a/content.css
+++ b/content.css
@@ -29,6 +29,8 @@ h4 {
   box-sizing: border-box;
   background-color: #262933;
   margin: 0;
+  width: 100%;
+  height: 3%;
   padding: 5px;
 }
 
@@ -36,6 +38,7 @@ h4 {
 .input_type_container {
   box-sizing: border-box;
   width: 97%;
+  height: 6%;
   padding: 5px;
   margin: 5px auto;
   background-color: #465160; /*465160 262933 343d4a*/
@@ -60,6 +63,7 @@ h4 {
 .input_container {
   box-sizing: border-box;
   width: 97%;
+  height: 8%;
   padding: 5px;
   margin: 5px auto 0 auto;
   background-color: #465160; /*465160 262933 343d4a*/
@@ -74,7 +78,8 @@ h4 {
 
 #input_data {
   resize: none;
-  color: #262933;
+  color: #fff;
+  background-color: #343d4a;
   margin: auto;
   width: 99%;
 }
@@ -82,9 +87,55 @@ h4 {
 .controls_container {
   box-sizing: border-box;
   width: 97%;
+  height: 3%;
   padding: 0 0 5px 0;
   margin: auto;
   background-color: #465160; /*465160 262933 343d4a*/
+}
+
+.output_container {
+  box-sizing: border-box;
+  width: 97%;
+  height: 53%;
+  margin: 5px auto;
+  background-color: #465160; /*465160 262933 343d4a*/
+  text-align: left;
+}
+
+.output_container p {
+  padding: 5px 7px 0 7px;
+  text-align: left;
+}
+
+#output_contents {
+  background-color: #343d4a;
+  box-sizing: border-box;
+  width: 97%;
+  height: 93%;
+  padding: 5px 0;
+  margin: auto;
+}
+
+.logs_container {
+  box-sizing: border-box;
+  width: 97%;
+  height: 16%;
+  margin: 5px auto;
+  background-color: #465160; /*465160 262933 343d4a*/
+}
+
+.logs_container p {
+  padding: 5px 7px 0 7px;
+  text-align: left;
+}
+
+#logs {
+  background-color: #343d4a;
+  box-sizing: border-box;
+  width: 97%;
+  height: 76%;
+  padding: 5px 0;
+  margin: auto;
 }
 
 button {               
