--- a/content.css
+++ b/content.css
@@ -114,6 +114,7 @@ h4 {
   height: 93%;
   padding: 5px 0;
   margin: auto;
+  overflow-y: auto;
 }
 
 .logs_container {
@@ -136,6 +137,7 @@ h4 {
   height: 76%;
   padding: 5px 0;
   margin: auto;
+  overflow-y: auto;
 }
 
 button {               
