--- a/content.css
+++ b/content.css
@@ -31,6 +31,7 @@ h4 {
   margin: 0;
   width: 100%;
   height: 3%;
+  min-height: 30px;
   padding: 5px;
 }
 
@@ -39,6 +40,7 @@ h4 {
   box-sizing: border-box;
   width: 97%;
   height: 6%;
+  min-height: 53px;
   padding: 5px;
   margin: 5px auto;
   background-color: #465160; /*465160 262933 343d4a*/
@@ -64,6 +66,7 @@ h4 {
   box-sizing: border-box;
   width: 97%;
   height: 8%;
+  min-height: 75px;
   padding: 5px;
   margin: 5px auto 0 auto;
   background-color: #465160; /*465160 262933 343d4a*/
@@ -88,6 +91,7 @@ h4 {
   box-sizing: border-box;
   width: 97%;
   height: 3%;
+  min-height: 30px;
   padding: 0 0 5px 0;
   margin: auto;
   background-color: #465160; /*465160 262933 343d4a*/
@@ -96,13 +100,15 @@ h4 {
 .output_container {
   box-sizing: border-box;
   width: 97%;
-  height: 53%;
+  height: 59%;
+  min-height: 300px;
   margin: 5px auto;
   background-color: #465160; /*465160 262933 343d4a*/
   text-align: left;
 }
 
 .output_container p {
+  box-sizing: border-box;
   padding: 5px 7px 0 7px;
   text-align: left;
 }
@@ -111,7 +117,7 @@ h4 {
   background-color: #343d4a;
   box-sizing: border-box;
   width: 97%;
-  height: 93%;
+  height: 91%;
   padding: 5px 0;
   margin: auto;
   overflow-y: auto;
@@ -120,25 +126,18 @@ h4 {
 .logs_container {
   box-sizing: border-box;
   width: 97%;
-  height: 16%;
+  height: 3%;
+  min-height: 30px;
   margin: 5px auto;
   background-color: #465160; /*465160 262933 343d4a*/
 }
 
 .logs_container p {
+  box-sizing: border-box;
   padding: 5px 7px 0 7px;
   text-align: left;
 }
 
-#logs {
-  background-color: #343d4a;
-  box-sizing: border-box;
-  width: 97%;
-  height: 76%;
-  padding: 5px 0;
-  margin: auto;
-  overflow-y: auto;
-}
 
 button {               
   background-color: #262933; 
