--- a/content.css
+++ b/content.css
@@ -100,11 +100,10 @@ h4 {
 .output_container {
   box-sizing: border-box;
   width: 97%;
-  height: 59%;
+  height: 65%;
   min-height: 300px;
   margin: 5px auto;
   background-color: #465160; /*465160 262933 343d4a*/
-  text-align: left;
 }
 
 .output_container p {
@@ -123,6 +122,47 @@ h4 {
   overflow-y: auto;
 }
 
+.results_table {
+  box-sizing: border-box;
+  font-size: 75%;
+  width: 100%;
+  height: fit-content;
+  white-space: nowrap;
+}
+
+.table_header,
+.table_body {
+  box-sizing: border-box;
+}
+
+.table_header tr {
+  box-sizing: border-box;
+  border-bottom: 1px solid #262933;
+}
+
+.table_body tr {
+  box-sizing: border-box;
+}
+
+.table_header th{
+  box-sizing: border-box;
+  padding: 1px 2px;
+  text-align: center;
+}
+
+.table_body td {
+  box-sizing: border-box;
+  padding: 1px 2px;
+  text-align: left;
+}
+
+.row_divider {
+  box-sizing: border-box;
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px solid #262933;
+}
+
 .logs_container {
   box-sizing: border-box;
   width: 97%;
@@ -132,7 +172,7 @@ h4 {
   background-color: #465160; /*465160 262933 343d4a*/
 }
 
-.logs_container p {
+#warehouse_logs {
   box-sizing: border-box;
   padding: 5px 7px 0 7px;
   text-align: left;
