--- a/content.css
+++ b/content.css
@@ -9,7 +9,8 @@
   background-color: #262933; /*465160 262933 343d4a*/
   box-sizing: border-box;
   height: 100%;
-  width: 420px;
+  width: 29%;
+  min-width: 270px;
   padding: 0;
   margin: 0;
   text-align: center;
@@ -113,9 +114,10 @@ h4 {
 }
 
 #output_contents {
-  background-color: #343d4a;
+  background-color: #465160;
   box-sizing: border-box;
   width: 97%;
+  min-height: 78%;
   height: fit-content;
   max-height: 88%;
   padding: 5px 0;
